--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header h1 {
 
 body{
     margin-top:60px;
-    background:url("http://www.thailandveo.com/wp-content/uploads/sites/3/2019/04/AdobeStock_207701012-min.jpeg");
+    background:url("manger/AdobeStock_207701012-min.jpeg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
